--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
